Fix required mineId for upload issue
- Remove mineID requirement in endpoints
- Modified table and route logic accordingly
